Issue #SB-15419 Pagination at the bottom is getting overlapped with footer section on clicking on 'View all' button from Training module

--- a/src/app/client/src/assets/styles/global.scss
+++ b/src/app/client/src/assets/styles/global.scss
@@ -34,7 +34,7 @@ body {
     }
     .footer-fix {
       min-height: calc(100vh - 168px);
-      padding-bottom: $base-block-space * 4;
+      padding-bottom: $base-block-space * 7;
     }
     .sb-mid-container-min-height{
       min-height: calc(100vh - 288px);
